--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>React App</title>
+    <title>React Portfolio 3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
